--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,46 @@ body{background-color: white;}
     right: 0;
 }
 
+.main-column{
+    width: 700px;
+}
+.t-column{
+    width: 400px;
+}
 
+.is-centered
+{
+    margin-top: 80px;
+
+}
+
+.card-panel {
+    margin-left: 20px;
+    padding: 20px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    background-clip: padding-box;
+    background-color: #fff;
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); 
+    border-color: activecaption;
+    border-width: 2px;
+}
+
+.img-avatar-container{
+    padding: 30px;
+    float: left;
+}
+.img-avatar-container img{
+    height: 150px;
+    width: 150px;
+
+}
+.aa{
+    float: left;
+}
 .main-nav h1 {
     margin: 0 50px 0 0;
     padding: 0;
@@ -80,7 +119,7 @@ body{background-color: white;}
 }
 
 .visible{
-        display: block!important;
+    display: block!important;
 }
 @media handheld and (max-width: 480px), screen and (max-device-width: 480px), screen and (max-width: 800px){
     .main-nav ul {
@@ -92,7 +131,7 @@ body{background-color: white;}
         left: 0;
         z-index: 6;
         background: #0143A3;
-       display: none;
+        display: none;
     }
 }
 @media handheld and (max-width: 480px), screen and (max-device-width: 480px), screen and (max-width: 800px)
@@ -126,6 +165,67 @@ body{background-color: white;}
     }
 }
 
+.main-inf-container{
+    position: relative;
+}
+.main-info-UR{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+}
+.main-info-LR{
+    position: absolute;
+    top: 90px;
+    right: 35px;
+    font-size: 20px;
+    font-weight: 400;
+    text-align: right;
+    line-height: 22px;
+}
+.main-info-LR span{
+    font-weight: bold;
+}
+
+.md-headline {
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 35px;
+}
+.md-subhead-1 {
+
+    font-size: 20px;
+    font-weight: 400;
+
+    line-height: 35px;
+}
+.md-subhead-2{
+
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 35px;
+}
+
+.name-container{
+    padding: 20px 60px 35px 60px;}
+.avatar-container{
+    padding-left:40px;
+}
+
+.main-fab {
+    position: absolute;
+    font-size: 24px;
+    top: 165px;
+    right: 20px;
+   
+
+}
+
+
+.md-tab{
+    text-transform: capitalize;
+}
+
 @font-face {
     font-family: 'MyriadProBold';
     src: url('fonts/myriad-pro-bold.eot'); /* IE9 Compat Modes */
@@ -134,4 +234,26 @@ body{background-color: white;}
         url('fonts/myriad-pro-bold.ttf')  format('truetype'),
         url('fonts/myriad-pro-bold.woff') format('woff');
     font-weight: bold;
+}
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Material Icons'), local('MaterialIcons-Regular'), url(fonts/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
 }
