--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .toolbardemoBasicUsage md-toolbar md-icon.md-default-theme {
     color: white; }
 
-body{background-color: white;}
+body{font-family: Roboto;}
 
 #logo {font-family:MyriadProBold; font-size: 25px; float: left }
 #logo2 {font-family:MyriadProBold; font-size: 25px; float: left; color: #0277bd; background-color: white;margin-left: 3px; padding: 0px 3px;border-radius: 2px;height: 35px;}
@@ -176,7 +176,7 @@ body{background-color: white;}
 }
 .main-info-LR{
     position: absolute;
-    top: 90px;
+    bottom: 60px;
     right: 35px;
     font-size: 20px;
     font-weight: 400;
@@ -215,45 +215,150 @@ body{background-color: white;}
 .main-fab {
     position: absolute;
     font-size: 24px;
-    top: 165px;
+    bottom: -33px;
+
     right: 20px;
-   
+
 
 }
 
+.card-title-container{
+    display: flex;
+}
+
+.card-container{
+
+}
+
+
+@media handheld and (max-width: 480px), screen and (max-device-width: 480px), screen and (max-width: 800px){
+    .card-title-container{
+        display: inline;
+    }
+    .name-container, .avatar-container{
+        margin: auto;   
+        display: table;
+    }
+    .name-container{
+        padding: 0px;
+        text-align: center;
+    }
+    .avatar-container{
+        padding: 0px;
+    }
+
+}
 
 .md-tab{
     text-transform: capitalize;
+    font-size: 16px;
+}
+.tab-container{
+    padding: 20px;
+}
+.tab-content-title-container{
+    padding: 5px;
+}
+.tab-content-title-container span{
+    font-size: 18px;
+    padding-top: 8px;
+    float: left;
+
+}
+.tab-content-title-container i{
+    font-size: 40px;
+    float: left;
+    padding-right: 10px;
+}
+.tab-content-text{
+    clear: both;
+    padding:1px 11px;
+    font-size: 15px;
+
+
 }
 
-@font-face {
-    font-family: 'MyriadProBold';
-    src: url('fonts/myriad-pro-bold.eot'); /* IE9 Compat Modes */
-    src: url('myriad-pro-bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-        url('fonts/myriad-pro-bold.otf') format('opentype'),
-        url('fonts/myriad-pro-bold.ttf')  format('truetype'),
-        url('fonts/myriad-pro-bold.woff') format('woff');
+
+.icon-dark-color {
+    color: #757575;
+}
+
+.md-button.md-fab {
+    z-index: 4;}
+
+.tab-content-exp-header{
+    clear: both;
+}
+.img-exp-header{
+    width: 60px;
+}
+.text-exp-header{
+    margin-left: 11px;
+    margin-top: 14px;
+
+}
+.text-exp-header span{
+    text-transform: uppercase;
     font-weight: bold;
+    font-size: 18px;
+    margin-top: 5px;    
 }
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(fonts/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
+.text-exp-header-sub{
+    font-size: 15px;
+    line-height:20px;
 }
 
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
+.text-exp-header-sub-2{
+    color: #66696a;
+    font-size: 15px;
+    line-height: 20px;
+}
+.media-data{
+    width: 49%;
+    position: relative;
+    padding: 10px 15px;
+    display: none;
+}
+.media-image {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 160px;
+}
+
+ .media-image .thumbnail {
+    
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.media-desc {
+ 
+    width: 100%;
+    height: 45px;
+    background-color: #f1f1f1;
+}
+
+.media-desc .description {
+  
+    white-space: nowrap;
+    overflow: hidden;
+    -ms-text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    font-size: 15px;
+    line-height: 17px;
+    color: #333;
+    font-weight: normal;
+    color: #555;
+    margin: 0px;
+    padding: 10px;
+}
+.toolbardemoBasicUsage{
+    background: white;
+}
+.clear{
+    clear: both;
 }
